# src/main/java/com/sails/ai/selfserviceapi/asset/entity/Industry.java
@@ -1,0 +1,25 @@
+package com.sails.ai.selfserviceapi.asset.entity;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import lombok.Getter;
+import lombok.Setter;
+
+@Entity
+@Table(name = "industries")
+@Getter
+@Setter
+public class Industry {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "id", nullable = false, updatable = false)
+    private Long id;
+
+    @Column(name = "name", nullable = false, length = 100, unique = true)
+    private String name;
+}
